# excel-utils

./: .gitignore  LICENSE  Qrcode.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  tests.yml
examples/: merge_example.py
excel_utils/: __init__.py  cleaner.py  converter.py  merger.py  stats.py
tests/: test_basic.py
