[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-utils"
version = "1.2.0"
authors = [
  { name="LlllJjjHhh", email="" }
]
description = "A handy Python toolset for batch processing Excel files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.10",
    "xlrd>=2.0.1",
    "numpy>=1.21.0",
]

[project.urls]
"Homepage" = "https://github.com/LlllJjjHhh/excel-utils"
"Bug Reports" = "https://github.com/LlllJjjHhh/excel-utils/issues"
"Source" = "https://github.com/LlllJjjHhh/excel-utils"
